ITE/GCL4/KP412085/Sprawozdanie5/strategies/tc.deploy.canary.stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-converter
spec:
  replicas: 6
  selector:
    matchLabels:
      app: temperature-converter
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: temperature-converter
        tier: backend
    spec:
      containers:
      - name: temperature-converter
        image: kacperpap/temperature_converter:0.1.0
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500"
        livenessProbe:
          httpGet:
            path: /api/healthcheck
            port: 5000
