ITE/GCL4/KP412085/Sprawozdanie5/strategies/tc.service.canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: temperature-converter-canary
spec:
  selector:
    app: temperature-converter
    tier: backend
    track: canary
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
