ITE/GCL4/KP412085/Sprawozdanie5/strategies/tc.ingress.canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temperature-converter-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
  - host: temperature-converter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: temperature-converter-canary
            port:
              number: 5000
