ITE/GCL4/KP412085/Sprawozdanie5/strategies/tc.ingress.stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temperature-converter-stable-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: temperature-converter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: temperature-converter-stable
            port:
              number: 5000
